# docs-generator

./: .env.example  .gitattributes  .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  APPLYING_NLP_AST_SPHINX_TO_DDD.md  CLAUDE.md  JAVA_PARSER_REFACTOR_RECOMMENDATIONS.md  MVP_IMPLEMENTATION_PLAN.md  PROJECT_INDEX.md  QUICKSTART.md  README.md  TDD_COVERAGE_ANALYSIS_REPORT.md  TEST_ANALYSIS_REPORT.md  WEEK2_DEMO_PACKAGE.md  daily_runbook_application_maintenance.md  daily_runbook_container_maintenance.md  daily_runbook_daily_maintenance.md  daily_runbook_daily_web_maintenance.md  daily_runbook_database.md  daily_runbook_database_maintenance.md  daily_runbook_demo_playbook.md  daily_runbook_example_ansible.md  daily_runbook_logs.md  daily_runbook_minimal.md  daily_runbook_monitoring.md  daily_runbook_quick.md  daily_runbook_security_maintenance.md  daily_runbook_service.md  daily_runbook_services.md  daily_runbook_web_server.md  daily_runbook_web_server_maintenance.md  demo_ddd_config_extraction.py  demo_results.md  demo_script.py  main.py  pyproject.toml  refactor_tests.py  refactor_tests_pathlib.py  (+3 more)
.claude/: settings.local.json
.claude/output-styles/: documentation-specialist.md  neovim-expert.md  pragmatic-engineer.md  technical-analyst.md
.serena/: aliases.sh  automation_config.json  project.yml  workflow_automation.yml
.serena/config/: __init__.py  advanced_settings.yml  applied_config.json
.serena/hooks/: __init__.py  advanced_memory_hooks.py  ddd_automation.py  ddd_wrapper.sh  trigger_hook.py
.serena/memories/: DDD_ABSTRACTION_ARCHITECTURE_CLARIFIED.md  DDD_ABSTRACTION_DESIGN_PATTERNS.md  DDD_ANSIBLE_BASELINE_ANALYSIS.md  DDD_ANSIBLE_PATTERNS_CRITICAL.md  DDD_ANSIBLE_ULTRATHINK_INSIGHTS.md  DDD_ARCHITECTURE_ANALYSIS.md  DDD_ARCHITECTURE_OVERVIEW_2025.md  DDD_AST_ARCHITECTURE_DECISION.md  DDD_CLI_TEST_VALIDATION.md  DDD_CODE_QUALITY_ASSESSMENT_2025.md  DDD_COMPLETE_EXTRACTOR_ARCHITECTURE.md  DDD_CONFIG_EXTRACTOR_TEST_SUITE.md  DDD_CORE_PRINCIPLES.md  DDD_CORE_PRINCIPLES_MAINTENANCE.md  DDD_CURRENT_FOCUS.md  DDD_CURRENT_FOCUS_MVP.md  DDD_CURRENT_STATE.md  DDD_DEMO_TALKING_POINTS.md  DDD_DEMO_TALKING_POINTS_MAINTENANCE.md  DDD_DOCUMENTATION_GENERATION.md  DDD_EXTENSIBILITY_ANALYSIS.md  DDD_EXTENSIBILITY_PROVEN_TDD.md  DDD_EXTRACTOR_IMPLEMENTATION_GUIDE.md  DDD_EXTRACTOR_IMPLEMENTATION_MAINTENANCE.md  DDD_FALSE_POSITIVE_BUG_FIXED.md  DDD_IMPLEMENTATION_TECHNICAL.md  DDD_MAINTENANCE_EXTRACTION_PATTERNS.md  DDD_MAINTENANCE_ORIENTED_FRAMEWORK.md  DDD_MAINTENANCE_SCENARIOS.md  DDD_MAINTENANCE_SCENARIOS_UPDATED.md  DDD_MEMORY_ARCHITECTURE_SPEC.md  DDD_MEMORY_INTERCONNECTION_MAP.md  DDD_MEMORY_QUICK_REFERENCE.md  DDD_MISSION_AND_VISION.md  DDD_MISSION_VISION_MAINTENANCE_FIRST.md  DDD_MVP_BRANCH_STRATEGY.md  DDD_MVP_CONFIG_STRATEGY.md  DDD_MVP_PLAN.md  DDD_MVP_TEST_STATUS.md  DDD_MVP_TEST_SUITE_COMPREHENSIVE.md  (+27 more)
.serena/memories/archive/: DDD_ANSIBLE_MVP_CHECKLIST.md  DDD_ANSIBLE_MVP_SPECIFICS.md  DDD_MVP_CONSOLIDATED.md  DDD_MVP_DOCUMENTATION_PHASE.md  DDD_MVP_UNIT_TEST_REQUIREMENTS.md  DDD_MVP_VALIDATION_COMMANDS.md  EXTRACTION_ERROR.md  MEMORY_ARCHITECTURE_SPEC.md  SERENA_OPTIMIZATION_STRATEGY.md  SESSION_DDD_MVP_SETUP_COMPLETE.md
.serena/scripts/: activate.sh  apply_config.py  dashboard.py
automation/: JAVA_PARSER_REFACTOR_SUMMARY.md  __init__.py  build.py  java_ast_extractor.py  java_parser.py  java_parser_exceptions.py  java_parser_patterns.py  java_parsers.py  nlp_extractor.py  setup.py
automation/filesystem/: __init__.py  abstract.py  factory.py  local.py  memory.py
demo-project/: .env.example  README.md  app.py
demo_samples/: application_maintenance.yml  container_maintenance.yml  database_maintenance.yml  security_maintenance.yml  web_server_maintenance.yml
docs/: AGENTIC_TDD_METHODOLOGY.md  API_REFERENCE.md  API_REFERENCE_EXTRACTORS.md  ATDD_EXECUTIVE_SUMMARY.md  ATDD_IMPLEMENTATION_GUIDE.md  ATDD_WORKFLOW_GUIDE.md  CONFIG_EXTRACTION_MODULE.md  DAYLIGHT-Documentation-Coverage-Spec.md  DAYLIGHT-Framework-Specifications.md  DAYLIGHT_SPECIFICATION.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_ANALYSIS_REPORT.md  EXAMPLE_RUNBOOK.md  EXECUTIVE_SUMMARY.md  MVP_PLAN.md  Makefile  QUICKSTART.md  README.md  TDD_Implementation_Plan_Week1.md  TDD_Test_Coverage_Report.md  TDD_WORKFLOW_EXTRACTORS.md  UNDERSTANDING_DDD_FRAMEWORK.md  USER_GUIDE.md  ansible-baseline.md  conf.py  index.rst  maintenance_first_implementation_strategy.md  mvp_workflow_pure_maintenance.md  spacy_semantic_analysis_design.md
docs/architecture/: ARCHITECTURE_ANALYSIS_REPORT.md  FILESYSTEM_ABSTRACTION_DESIGN.md  FILESYSTEM_ABSTRACTION_MIGRATION.md  PROJECT_SPECIFICATION.md  TEST_SUITE_ARCHITECTURE.md
docs/archive/case-studies/: ATDD_CASE_STUDY.md
docs/claude-reports/: ANALYSIS_REPORT.md  NAVIGATION.md  PROJECT_INDEX.md  TEST_SUITE_DESIGN.md
docs/learning/: sphinx-intro.md  why-sphinx.md
docs/source/: conf.py  index.rst
docs/specs/: semver.md
examples/javascript-project/: package.json
scripts/: coverage_tracker.py  prepare-demo.sh  setup_automation.py  setup_sphinx.py
src/: cli.py
src/ddd/: __init__.py
src/ddd_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: MVP_TEST_SUITE_SPECIFICATION.md  TEST_ANALYSIS_REPORT.md  __init__.py  conftest.py  helpers.py  hook_test_data.py  test_abstract_extractor.py  test_abstraction_security.py  test_ansible_extractor.py  test_artifact_extractors.py  test_baseline_ansible.py  test_business_logic_extraction.py  test_claude_hooks.py  test_cli.py  test_config_extractors_design.md  test_coverage.py  test_example_integration.py  test_extractor_contract.py  test_extractors.py  test_filesystem_abstraction.py  test_java_ast_extractor.py  test_metrics_collector.py  test_mvp_cli.py  test_mvp_daily_extractor.py  test_nlp_extractor.py  test_python_generic_extractor.py  test_specs.py  test_update_index_hook.py
tests/config_extractors/: __init__.py  base.py
tests/green_phase/: test_sphinx_generator.py
tests/red_phase/: test_core_extraction.py  test_error_patterns.py  test_permission_extraction.py
(+37 files in other folders)
