[project]
name = "ddd-framework"
version = "0.1.0"
description = "Documentation Driven Development - TDD for documentation coverage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "python-dotenv>=1.0",
    "sphinx>=7.0",
    "sphinx-autodoc2>=0.5",
    "myst-parser>=2.0",
    "sphinx-rtd-theme>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "sphinx-autobuild>=2021.0",
    "invoke>=2.0",
]

[project.scripts]
ddd = "cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=html --cov-report=term"
# MVP: Fail if coverage drops below 80%
minversion = "7.0"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Keep it simple for MVP
ignore = ["E501"]  # Line length (black handles)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F841"]  # Unused imports and variables okay in tests

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "pre-commit>=4.3.0",
    "sphinx-autobuild>=2025.8.25",
]
